SWIG (Simplified Wrapper and Interface Generator)

See the CHANGES.current file for changes in the current version.
See the RELEASENOTES file for a summary of changes in each release.

Version 2.0.6 (30 April 2012)
=============================

2012-04-25: wsfulton
            [Lua] Fix uninitialised variable in SWIGTYPE **OUTPUT typemaps as reported by Jim Anderson.

2012-04-28: wsfulton
            [Python] Fix compilation errors when wrapping STL containers on Mac OSX and possibly other systems.

2012-04-28: wsfulton
            [Java] Patch 3521811 from Leo Davis - char **STRING_ARRAY typemaps fixed to handle
            null pointers.

Version 2.0.5 (19 April 2012)
=============================

2012-04-14: wsfulton
            [Lua] Apply patch #3517435 from Miles Bader - prefer to use Lua_pushglobaltable

2012-04-14: wsfulton
            [Ruby] Apply patch #3517769 from Robin Stocker to fix compile error on MacRuby using RSTRING_PTR.

2012-04-13: wsfulton
            Apply patch #3511009 from Leif Middelschulte for slightly optimised char * variable wrappers.

2012-04-13: wsfulton
            [Lua] Apply #3219676 from Shane Liesegang which adds:
            - support for %factory
            - a __tostring method
            - a __disown method

2012-04-13: wsfulton
            [Xml] Apply #3513569 which adds a catchlist to the xml output.

2012-04-05: olly
	    [Lua] Add support for Lua 5.2 (patch SF#3514593 from Miles Bader)

2012-03-26: xavier98
	    [octave] Apply patch #3425993 from jgillis: add extra logic to the octave_swig_type::dims(void) method: it checks if the user has defined a __dims__ method and uses this in stead of returning (1,1)
	    [octave] Apply patch #3424833 from jgillis: make is_object return true for swig types

2012-03-24: wsfulton
            [D] Apply #3502431 to fix duplicate symbols in multiple modules.

2012-03-21: wsfulton
            Fix #3494791 - %$isglobal for %rename matching.

2012-03-20: wsfulton